--- a/public/db/app.json
+++ b/public/db/app.json
@@ -1,3 +1,32 @@
 {
-	"tables": [{}]
+  "tables": [
+    {
+      "id": 1,
+      "status": "busy",
+      "peopleAmount": "2",
+      "maxPeopleAmount": 10,
+      "bill": 0
+    },
+    {
+      "id": 2,
+      "status": "busy",
+      "peopleAmount": 3,
+      "maxPeopleAmount": 4,
+      "bill": 36
+    },
+    {
+      "id": 3,
+      "status": "cleaning",
+      "peopleAmount": 2,
+      "maxPeopleAmount": 4,
+      "bill": 64
+    },
+    {
+      "id": 4,
+      "status": "busy",
+      "peopleAmount": 2,
+      "maxPeopleAmount": 2,
+      "bill": 0
+    }
+  ]
 }
