--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.2.0",
 		"@testing-library/user-event": "^13.5.0",
+		"autoprefixer": "10.4.5",
 		"bootstrap": "5.1.3",
+		"font-awesome": "^4.7.0",
 		"json-server": "0.17.0",
 		"npm-run-all": "4.1.5",
 		"react": "^18.1.0",
